<resources>
    <string name="app_name">Tworaveler</string>
    <string name="kakao_app_key">24a1dd382f073b0b884987243830b44b</string>
    <string name="facebook_app_id">155809951644243</string>
    <string name="fb_login_protocol_scheme">fac10b3266092ac6bd94e69e10f954e6</string>
    <string name="alert_content_not_login">로그인이 되어있지 않습니다</string>
    <string name="progress_message">Loading</string>
    <string name="signUp_alert_title_fail">회원가입 실패</string>
    <string name="signUp_alert_content_fail">이메일 또는 비밀번호 입력이 잘못 되었습니다</string>
    <string name="signUp_alert_content_fail2">중복된 이메일 입니다</string>
    <string name="signUp_alert_content_fail3">중복된 닉네임 입니다</string>
    <string name="signUp_alert_content_fail4">이메일 형식은 (4~16자리 문자)@(문자).com,org,net 입니다</string>
    <string name="signUp_alert_content_fail5">비밀번호는 영,한,숫자,특수문자 8자리에서 32자리 까지 입니다</string>
    <string name="signUp_alert_content_fail6">닉네임은 영,한,숫자 2자리에서 16자리 까지 입니다</string>
    <string name="signUp_alert_content_fail7">서버에 문제가 발생하여 회원가입을 할 수 가 없습니다</string>
    <string name="signUp_alert_title_success">회원가입 성공</string>
    <string name="signUp_alert_content_success">회원가입에 성공 하였습니다</string>
    <string name="signIn_alert_title_fail">로그인 실패</string>
    <string name="signIn_alert_content_faile">이메일 또는 비밀번호 입력이 잘못 되었습니다</string>
    <string name="signIn_alert_content_fail2">이메일과 비밀번호가 일치하지 않습니다</string>
    <string name="signIn_alert_content_fail3">회원 가입하지 않은 계정 입니다</string>
    <string name="signIn_alert_content_fail4">서버에 문제가 발생하여 로그인에 실패하였습니다</string>
    <string name="signIn_alert_title_success">로그인 성공</string>
    <string name="signIn_alert_content_success">로그인에 성공 하였습니다</string>
    <string name="profileSet_mod_fail_alert_title">수정 실패</string>
    <string name="profileSet_mod_fail_alert_content">서버에 문제가 발생하여 수정 실패 하였습니다</string>
    <string name="profileSet_mod_fail_alert_content_2">수정 실패 하였습니다</string>
    <string name="profileSet_mod_fail_alert_content_3">닉네임이 중복 되었습니다</string>
    <string name="profileSet_mod_success_alert_title">수정 성공</string>
    <string name="profileSet_mod_success_alert_content">수정 성공 하였습니다</string>
    <string name="profileSet_info_fail_alert_title">조회 실패</string>
    <string name="profileSet_info_fail_alert_content">조회 실패 하였습니다</string>
    <string name="profileSet_logout_alert_title">로그아웃</string>
    <string name="profileSet_logout_alert_content">로그 아웃 하시겠습니까?</string>
    <string name="profileSet_logout_fail_alert_title">로그아웃 실패</string>
    <string name="profileSet_logout_fail_alert_content">로그 아웃에 실패하였습니다</string>
    <string name="profileSet_signOut_alert_title">회원 탈퇴</string>
    <string name="profileSet_signOut_fail_alert_title">회원 탈퇴 실패</string>
    <string name="profileSet_signOut_fail_alert_content">정말이야? 다시 한번 생각해봐 ㅠㅠ</string>
    <string name="profileSet_signOut_fail_alert_content2">서버에 문제가 발생하여 회원 탈퇴 실패하였습니다</string>
    <string name="profileSet_signOut_fail_alert_content3">회원 탈퇴 성공</string>
    <string name="profileSet_signOut_fail_alert_content5">비밀번호가 일치하지 않습니다</string>
    <string name="profileSet_signOut_fail_alert_content6">이메일이 일치하지 않습니다</string>
    <string name="profileSet_signOut_alert_input_messae">비밀번호를 입력해 주세요</string>
    <string name="regist_alert_title_fail">일정 등록 실패</string>
    <string name="regist_alert_content_fail">일정 등록 실패 하였습니다</string>
    <string name="regist_alert_content_fail_2">여행 제목을 등록해주세요</string>
    <string name="regist_alert_content_fail_3">도시를 검색해주세요</string>
    <string name="regist_alert_content_fail_4">일정 시작 날짜와 종료 날짜가 올바르지 않습니다</string>
    <string name="regist_alert_content_fail_5">서버에 문제가 발생하여 일정 등록 실패 하였습니다</string>
    <string name="regist_alert_content_fail_6">일정 시작 날짜가 종료 날짜 보다 같거나 늦을 수 없습니다</string>
    <string name="regist_day_list_alert_title_fail">세부 일정 불러오기 실패</string>
    <string name="regist_day_list_alert_content_fail">세부 일정 불러오기 실패 하였습니다</string>
    <string name="regist_day_list_alert_content_fail_2">서버에 문제가 발생하여 불러오기 실패 하였습니다</string>
    <string name="regist_day_detail_alert_title_fail">세부 일정 등록 실패</string>
    <string name="regist_day_detail_alert_content_fail">세부 일정 등록 실패 하였습니다</string>
    <string name="regist_day_detail_alert_content_fail_2">장소 제목을 등록해주세요</string>
    <string name="regist_day_detail_alert_content_fail_3">위치를 검색해주세요</string>
    <string name="regist_day_detail_alert_content_fail_4">일정 시작 날짜와 종료 날짜가 올바르지 않습니다</string>
    <string name="regist_day_detail_alert_content_fail_5">서버에 문제가 발생하여 일정 등록 실패 하였습니다</string>
    <string name="regist_day_detail_alert_content_fail_6">메모를 등록해 주세요</string>
    <string name="regist_day_detail_alert_content_fail_7">일정 시작 시간이 종료 시간 보다 같거나 늦을 수 없습니다</string>
    <string name="regist_day_detail_alert_title_success">세부 일정 등록 성공</string>
    <string name="regist_day_detail_alert_content_success">세부 일정 등록을 성공하였습니다</string>
    <string name="myscheduleDetailModify_alert_title_fail">세부 일정 수정 실패</string>
    <string name="myscheduleDetailModify_alert_content_fail">세부 일정 수정 실패 하였습니다</string>
    <string name="myscheduleDetailModify_alert_content_fail_2">서버에 문제가 발생하여 세부 일정 수정 실패 하였습니다</string>
    <string name="myscheduleDetailModify_alert_title_success">세부 일정 수정 성공</string>
    <string name="myscheduleDetailModify_alert_content_success">세부 일정 수정 성공 하였습니다</string>
    <string name="bagDelete_alert_title_fail">여행 가방 삭제 실패</string>
    <string name="bagDelete_alert_content_fail">여행 가방을 삭제하는데 실패하였습니다</string>
    <string name="bagDelete_alert_content_fail_2">여행 가방을 삭제하는데 문제가 발생하였습니다</string>
    <string name="select_feed_city">찾으시는 도시를 검색하세요</string>
    <string name="select_feed_nickname">찾으시는 닉네임을 검색하세요</string>
    <string name="comment_alert_title_fail">댓글 등록 실패</string>
    <string name="comment_alert_title_fail_2">댓글 목록 불러오기 실패</string>
    <string name="comment_alert_title_fail_3">댓글 수정 실패</string>
    <string name="comment_alert_title_fail_4">댓글 삭제 실패</string>
    <string name="comment_detail_alert_title_fail_3">세부일정 댓글 수정 실패</string>
    <string name="comment_detail_alert_title_fail_4">세부일정 댓글 삭제 실패</string>
    <string name="comment_alert_content_fail">댓글 등록을 실패하였습니다</string>
    <string name="comment_alert_content_fail_2">댓글 목록을 불러오는데 실패하였습니다</string>
    <string name="comment_alert_content_fail_3">댓글 수정을 실패 하였습니다</string>
    <string name="comment_alert_content_fail_4">댓글 삭제를 실패 하였습니다</string>
    <string name="comment_alert_content_fail_5">서버에 문제가 발생하였습니다</string>
    <string name="comment_EditText_content">댓글을 달아주세요</string>
    <string name="fragmentBag_alert_title_fail">카테고리 불러오기 실패</string>
    <string name="fragmentBag_alert_title_fail_2">가방 등록 실패</string>
    <string name="fragmentBag_alert_content_fail">카테고리를 불러오는데 실패 하였습니다</string>
    <string name="fragmentBag_alert_content_fail_2">카테고리를 불러오는데 문제가 발생하였습니다</string>
    <string name="fragmentBag_alert_content_fail_3">여행 가방 아이템을 찾는데 실패하였습니다</string>
    <string name="fragmentBag_alert_content_fail_4">여행 가방을 등록하는데 실패하였습니다</string>
    <string name="fragmentFeed_alert_title_fail">피드 불러오기 실패</string>
    <string name="fragmentFeed_alert_content_fail">피드 불러오는데 실패 하였습니다</string>
    <string name="fragmentFeed_Delete_alert_content_title">일정 삭제</string>
    <string name="fragmentFeed_Delete_alert_content_fail">삭제하시겠습니까?</string>
    <string name="fragmentFeed_schedule_alert_title_fail">팔로우 실패</string>
    <string name="fragmentFeed_schedule_alert_content_fail">팔로우 하는데 실패 하였습니다</string>
    <string name="fragmentFeed_schedule_alert_title_like_fail">좋아요 실패</string>
    <string name="fragmentFeed_schedule_alert_content_like_content_fail">좋아요 하는데 실패 하였습니다</string>
    <string name="fragmentMyPageHome_alert_title_fail">내 여행 목록불러오기 실패</string>
    <string name="fragmentMyPageHome_alert_content_fail">여행 목록을 불러오는데 실패 하였습니다</string>
    <string name="fragmentMyPageDetail_alert_title_fail">세부일정 목록이 없습니다.</string>
    <string name="fragmentMyPageDetail_alert_content_fail">세부일정 목록을 추가해 주세요</string>
    <string name="fragmentFeedSchedule_alert_title_fail">일정 조회 실패.</string>
    <string name="fragmentFeedSchedule_alert_content_fail">일정 조회를 실패하였습니다</string>
    <string name="fragmentFeedSchedule_alert_content_fail_2">서버에 문제가 발생하여 일정 조회를 실패하였습니다</string>
    <string name="activity_login$hint_ET_email">Email</string>
    <string name="activity_login$hint_ET_password">Password</string>
    <string name="activity_login$text_signUp">New User?</string>
    <string name="activity_sign_up$hint_ET_email">Email</string>
    <string name="activity_sign_up$hint_ET_password">Password</string>
    <string name="activity_sign_up$hint_ET_nickname">Nickname</string>
    <string name="activity_search_city_hint_1">도시 검색</string>
    <string name="activity_regist_title">add trip</string>
    <string name="activity_regist_text_0">여행 제목</string>
    <string name="activity_regist_text_1">여행 제목</string>
    <string name="activity_regist_text_2">어디를 가시나요?</string>
    <string name="activity_regist_text_3">도시 검색</string>
    <string name="activity_regist_text_4">언제 가시나요?</string>
    <string name="activity_regist_text_5">여행 시작 날짜</string>
    <string name="activity_regist_text_6">여행 종료 날짜</string>
    <string name="regist_fail_alert_title_fail">여행등록 실패</string>
    <string name="regist_fail_alert_content_fail2">서버에 문제가 발생하여 여행등록에 실패 하였습니다</string>
    <string name="activity_myschedule_modify_title">edit trip</string>
    <string name="myschedule_modify_fail_alert_title_fail">여행 수정 실패</string>
    <string name="myschedule_modify_fail_alert_content_fail">수정 실패 하였습니다</string>
    <string name="myschedule_modify_fail_alert_content_fail2">서버에 문제가 발생하여 여행 수정에 실패 하였습니다</string>
    <string name="activity_myschedule_detail_modify_title">edit plan</string>
    <string name="myschedule_detail_modify_fail_alert_title_fail">여행계획 수정 실패</string>
    <string name="myschedule_detail_modify_fail_alert_content_fail2">서버에 문제가 발생하여 여행계획 수정에 실패 하였습니다</string>
    <string name="activity_regist_detail_title">Regist Detail</string>
    <string name="activity_regist_day_detail_title">add plan</string>
    <string name="activity_regist_day_detail_text_0">장소 제목</string>
    <string name="activity_regist_day_detail_text_1">장소 제목</string>
    <string name="activity_regist_day_detail_text_2">어디를 가시나요?</string>
    <string name="activity_regist_day_detail_text_3">위치 검색</string>
    <string name="activity_regist_day_detail_text_4">언제 가시나요?</string>
    <string name="activity_regist_day_detail_text_5">일정 시작 시간</string>
    <string name="activity_regist_day_detail_text_6">일정 종료 시간</string>
    <string name="activity_regist_day_detail_text_7">간단한 일정 메모</string>
    <string name="activity_regist_day_detail_text_8">일정 메모</string>
    <string name="activity_regist_day_detail_list_title">add plan</string>
    <string name="activity_regist_day_detail_list_text">세부 일정이 없습니다</string>
    <string name="activity_comment_list_title">comment</string>
    <string name="activity_comment_hint">댓글달기</string>
    <string name="activity_comment_up_btn">게시</string>
    <string name="activity_comment_nocomment">등록된 글이 없습니다.</string>
    <string name="comment_not_login_editText_message">로그인이 필요합니다</string>
    <string name="fragment_feed_title">tworaveler</string>
    <string name="fragment_feed_search">도시 및 여행자 검색</string>
    <string name="fragment_alarm_title">alarm</string>
    <string name="fragment_alarm_text">알람을 확인하려면 로그인 해주세요</string>
    <string name="fragmentMyPage_title">my trip</string>
    <string name="fragmentMyPage_profile">로그인</string>
    <string name="fragmentMypage_notice">여행등록을 하려면 로그인 해주세요</string>
    <string name="fragmentMyPage_profile_title">profile</string>
    <string name="fragmentMyPage_profile_follower">팔로워</string>
    <string name="navigation_title_home">홈</string>
    <string name="navigation_title_alarm">알람</string>
    <string name="navigation_title_regist">일정 등록</string>
    <string name="navigation_title_bag">여행 가방</string>
    <string name="DEVICE_WIDTH">360</string>
    <string name="DEVICE_HEIGHT">616</string>
    <string name="FRAGMENT_HEIGHT">560</string>
</resources>