<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation$home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_title_home" />

    <item
        android:id="@+id/navigation$peed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_title_peed" />

    <item
        android:id="@+id/navigation$regist"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_title_regist" />

    <item
        android:id="@+id/navigation$alram"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/navigation_title_alarm" />

    <item
        android:id="@+id/navigation$bag"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_title_bag" />

</menu>
