<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.hare.tworaveler.Activity.Comment"
    android:orientation="vertical"
    android:weightSum="@string/DEVICE_HEIGHT">
    <com.developer.hare.tworaveler.UI.Layout.MenuTopTitle
        android:id="@+id/activity_comment$menuToptitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        app:leftButton="@drawable/icon_back"
        app:titleText="@string/activity_comment_list_title" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="504.7"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="504.7"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="205"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="53"
                android:orientation="horizontal"
                android:weightSum="360"
                android:gravity="center">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="65.7"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="13.7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_comment_nocomment"
                android:textSize="12sp"/>

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_comment$RV_commentlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="15"/>
        <EditText
            android:id="@+id/activity_comment$ET_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="288"
            android:hint="@string/activity_comment_hint"/>
        <TextView
            android:id="@+id/activity_comment$up_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="57"
            android:text="@string/activity_comment_up_btn"
            android:textSize="14sp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
