<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.developer.hare.tworaveler.UI.Layout.MenuTopTitle
        android:id="@+id/regist_day_detail$menuToptitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_top_title_height"
        android:layout_weight="0"
        app:leftButton="@drawable/button_left"
        app:rightButton="@drawable/button_right"
        app:titleText="@string/activity_regist_day_detail_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <ImageView
                android:id="@+id/regist_day_detail$IV_cover"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:background="@color/default_Image_color" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/activity_regist_day_detail_text_0" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/activity_regist_day_detail_text_1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/regist_day_detail$TV_citySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/activity_regist_day_detail_text_3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/activity_regist_day_detail_text_2" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0">

                <TextView
                    android:id="@+id/regist_day_detail$TV_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/activity_regist_day_detail_text_4" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/regist_day_detail$TV_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/activity_regist_day_detail_text_5" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@color/default_Image_color" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
