<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="@string/FRAGMENT_HEIGHT"
tools:context="com.developer.hare.tworaveler.Fragment.Menu.FragmentMyPage">

    <com.developer.hare.tworaveler.UI.Layout.MenuTopTitle
        android:id="@+id/fragment_mypage$topbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        app:leftButton="@drawable/icon_profile"
        app:titleText="@string/fragmentMyPage_title" />

    <LinearLayout
        android:id="@+id/fragment_mypage$LL_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="505"
        android:weightSum="505"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="169"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="116"
            android:gravity="center"
            android:weightSum="360"
            >
            <ImageView
                android:id="@+id/fragment_mypage$IV_nologin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="116"
                android:background="@drawable/mypage_login"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="275"
            android:weightSum="275"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="14"/>
            <TextView
                android:id="@+id/fragment_mypage$TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragmentMypage_notice"
                android:textSize="13sp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
