<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="@string/DEVICE_HEIGHT">

    <com.developer.hare.tworaveler.UI.Layout.MenuTopTitle
        android:id="@+id/activity_regist$menuToptitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        app:leftButton="@drawable/icon_cancel"
        app:rightButton="@drawable/icon_check"
        app:titleText="@string/activity_regist_title" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="26" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="534"
        android:weightSum="@string/DEVICE_WIDTH">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="16" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="328"
            android:orientation="vertical"
            android:weightSum="534">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="171">

                <ImageView
                    android:id="@+id/activity_regist$IV_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/default_theme_Image_color"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="328"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="136" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="56"
                        android:orientation="vertical"
                        android:weightSum="171">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="62.7" />

                        <ImageView
                            android:id="@+id/activity_regist$IV_camera"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="45.7"
                            android:background="@drawable/icon_camera" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/activity_regist$TV_txt_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/activity_regist_text_0"
                android:textColor="@color/regist_text_TV_color"
                android:textSize="@dimen/TextSize_Content_1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="46"
                android:background="@color/default_theme_text_color"
                android:weightSum="328">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="28.3" />

                <EditText
                    android:id="@+id/activity_regist$TV_tripName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_regist_text_1"
                    android:textColor="@color/regist_text_ET_color"
                    android:textCursorDrawable="@drawable/cursor_edittext"
                    android:textSize="@dimen/TextSize_Content_1" />
            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="22" />

            <TextView
                android:id="@+id/activity_regist$TV_txt_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/activity_regist_text_2"
                android:textColor="@color/regist_text_TV_color"
                android:textSize="@dimen/TextSize_Content_1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="46"
                android:background="@color/default_theme_text_color"
                android:onClick="searchCity"
                android:weightSum="328">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="28.3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="21.3"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:weightSum="46">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="20.7"
                        android:background="@drawable/icon_citysearch" />
                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="14.3" />

                <TextView
                    android:id="@+id/activity_regist$TV_citySearch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_regist_text_3"
                    android:textColor="@color/regist_text_ET_color"
                    android:textSize="@dimen/TextSize_Content_1" />
            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="22" />

            <TextView
                android:id="@+id/activity_regist$TV_txt_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/activity_regist_text_4"
                android:textColor="@color/regist_text_TV_color"
                android:textSize="@dimen/TextSize_Content_1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="46"
                android:weightSum="328">

                <TextView
                    android:id="@+id/activity_regist$TV_start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="142"
                    android:background="@color/default_theme_text_color"
                    android:gravity="center"
                    android:text="@string/activity_regist_text_5"
                    android:textColor="@color/regist_text_ET_color"
                    android:textSize="@dimen/TextSize_Content_1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="14" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="16"
                    android:background="@color/default_theme_text_color" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="14" />

                <TextView
                    android:id="@+id/activity_regist$TV_end"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="142"
                    android:background="@color/default_theme_text_color"
                    android:gravity="center"
                    android:text="@string/activity_regist_text_6"
                    android:textColor="@color/regist_text_ET_color"
                    android:textSize="@dimen/TextSize_Content_1" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="16" />

    </LinearLayout>

</LinearLayout>
